<resources>
    <string name="app_name">ATHWAS</string>
    <string name="google_map_key" translatable="false">AIzaSyDpJJNB7IhJWUPnxo57hIp6Gwhvih31eas</string>
    <string name="google_map_direction_key" translatable="false">AIzaSyC4MhJYysKpRFHe9Re--y5S0_PCtxGir9Q</string>
    <string name="settings">Go to setting</string>
    <string name="not_now">Not Now</string>
    <string name="instructions_to_turn_on_location_permission">You need to enable location permission to make the app working. Please go to setting and enable it.</string>
    <string name="unable_fetch_location">Unable to fetch your current location</string>
    <string name="proceed">Proceed</string>
    <string name="please_enter_email_or_mobile_number">Please enter phone number or email</string>
    <string name="choose_image">Choose Image</string>
    <string name="enter_valid_email_address">Please enter valid email address</string>
    <string name="gallery">Gallery</string>
    <string name="new_password_validation_msg">New password should be at least between 6 to 15 characters</string>
    <string name="password_validation_msg">Password should be at least between 6 to 15 characters</string>
    <string name="confirm_new_matched_validation_msg">Confirm Password should be same as new password</string>
    <string name="camera">Camera</string>
    <string name="confirm_password_validation_msg">Confirm Password should be at least between 6 to 15 characters</string>
    <string name="enter_conform_password">Enter confirm password</string>
    <string name="please_enter_valid_otp">Please enter valid OTP.</string>
    <string name="mobile_number_validation_msg">Mobile number should be at least between 7 to 15 characters</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="login">Login</string>
    <string name="please_login_to_continue">Please Login to Continue</string>
    <string name="hi_good_day">Hi, Good Day!</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="label_check_term_policy">By Signing up you agree to our</string>
    <string name="get_started">Get Started</string>
    <string name="login_so_you_full_access">Login so you full access! or just</string>
    <string name="or_just_create_a_new_account">create a new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="hello">Hello!</string>
    <string name="create_an_account_to_continue">Create an account to Continue</string>
    <string name="email_address_optional">Email Address (optional)</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="verification_code">Verification Code</string>
    <string name="expiring_in">Expiring in %s</string>
    <string name="dashes">----</string>
    <string name="please_enter_4_digit_otp_msg">Please enter the 4 digits OTP sent \nto %s</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="enter_email_mobile_no">Please enter mobile number or email</string>
    <string name="enter_valid_email_mobile_no">Please enter valid mobile number or email</string>
    <string name="enter_valid_mobile_no">Invalid Mobile Number!</string>
    <string name="enter_your_mobile_no">Please enter your mobile number</string>
    <string name="enter_registered_mobile_no">Please enter your registered Mobile Number</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_your_password">Please enter your password</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="privacy_policy2">Privacy Policy</string>
    <string name="privacy_policy_wd">Privacy Policy</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="enter_your_registered_mobile_number_to_n_reset_your_password">Enter your registered mobile number to \nreset your password</string>
    <string name="send">Send</string>
    <string name="set_your_new_password">Set Your New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="home">Home</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_your_email">Please enter your email</string>
    <string name="msg_email_validation_length">9 to 320 characters allowed!</string>
    <string name="enter_valid_email">Wrong Email ID format!</string>
    <string name="no_wallet_history_available">No wallet History Available</string>
    <string name="no_orders_available">No Orders Available</string>
    <string name="no_money_request_available">No Money Requests Available</string>
    <string name="avail_qty">Avail Qty. -</string>
    <string name="voucher_not_available">Voucher not available</string>
    <string name="no_notification_available">No Notification Available</string>
    <string name="no_order_available">No Order Available</string>
    <string name="total">Total</string>
    <string name="skip">Skip</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_confirm_password_same">Password and confirm password should be same</string>
    <string name="password_should_be_min_6_char">Password must be 6 to 20 characters.</string>
    <string name="invalid_password_format">No spaces allowed in password</string>
    <string name="accept_terms_n_condition">Please accept terms &amp; Condition.</string>
    <string name="confirm_password_should_be_same_as_new_password">Confirm Password should be same as new password.</string>
    <string name="you_can_not_request_yourself">You can\'t request to yourself.</string>
    <string name="no_deals_available">No Deals available</string>
    <string name="no_offer_available">No Offers Available</string>
    <string name="no_reward_available">No Reward Available</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="your_queries">Your Queries?</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="please_enter_your_query">Please enter your query</string>
    <string name="skip_for_now">Skip for Now</string>
    <string name="email_mobile_number">Email/Mobile Number</string>
    <string name="select_address">Select Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="search_for_your_location">Search for your location..</string>
    <string name="tag_this_location_for_later">Tag this location for later</string>
    <string name="floor_apartment_no_house_no">Floor/Apartment No./House No. and Landmark</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="add">Add</string>
    <string name="ssl_error_title">SSL Certificate Error</string>
    <string name="ssl_untrusted">The certificate authority is not trusted.</string>
    <string name="ssl_expired">The certificate has expired.</string>
    <string name="ssl_id_mismatch">The certificate Hostname mismatch.</string>
    <string name="ssl_not_yet_valid">The certificate is not yet valid.</string>
    <string name="ssl_do_you_want_continue">" Do you want to continue anyway?"</string>
    <string name="no_item_available">No Items Available</string>
    <string name="save">Save</string>
    <string name="pack_size">Pack Size</string>
    <string name="size">Size</string>
    <string name="see_all_offers">See all Offers</string>
    <string name="about_product">About Product :</string>
    <string name="similar_product">Similar Products</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="sort_by">Sort By</string>
    <string name="filter">Filter</string>
    <string name="filters">Filters</string>
    <string name="price">Price</string>
    <string name="min_price">Min. Price</string>
    <string name="max_price">Max. Price</string>
    <string name="customer_rating">Customer Rating</string>
    <string name="categroy">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="brand">Brand</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="sort">Sort</string>
    <string name="choose_address">Choose Address</string>
    <string name="my_address">My Addresses</string>
    <string name="my_orders">My Orders</string>
    <string name="current_orders">Current Orders</string>
    <string name="past_orders">Past Orders</string>
    <string name="order_id">Order ID:</string>
    <string name="order_date_and_time">Order date and time:</string>
    <string name="delivery_date_and_time">Delivery date and time:</string>
    <string name="estimated_delivery_date">Estimated delivery date:</string>
    <string name="payment_mode">Payment Mode:</string>
    <string name="payment_mode_wc">Payment Mode</string>
    <string name="payable_amount">Payable Amount:</string>
    <string name="paid_amount">Paid Amount:</string>
    <string name="my_wallet">Athwas Pay</string>
    <string name="wallet">Wallet</string>
    <string name="add_money">Add Money</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="apply">Apply</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="credit_card">Credit Card</string>
    <string name="debit_card">Debit Card</string>
    <string name="netbanking">Netbanking</string>
    <string name="profile">Profile</string>
    <string name="wallet_statement">Wallet Statement</string>
    <string name="delivery_address">Delivery Addresses</string>
    <string name="wish_list">Wish List</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="logout">Logout</string>
    <string name="upload_your_image">Upload your image</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password_wo_">Change Password</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="submit_review">Submit Review</string>
    <string name="favourite_product">Favourite Products</string>
    <string name="done">Done</string>
    <string name="size_value">Size: %s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="otp_sent_on_mobile_or_email">OTP has been sent to your mobile number or email address.Please verify</string>
</resources>