<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginActivity">

    <data>

        <variable
            name="viewModel"
            type="com.app.ia.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/header"
                layout="@layout/login_header"
                app:viewModel="@{viewModel}" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="@dimen/_30sdp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/txtViewSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:background="@color/white"
                app:cardElevation="@dimen/_2sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_16sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_16sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/textViewLogo"
                        android:layout_width="@dimen/_75sdp"
                        android:layout_height="@dimen/_75sdp"
                        android:layout_marginTop="@dimen/_12sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/login_logo" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewLoginContinue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        app:fontFamily="@font/linotte_semi_bold"
                        android:text="@string/please_login_to_continue"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_13sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewLogo" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTextMobileNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edittext_bg"
                        android:hint="@string/email_mobile_number"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewLoginContinue" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTextPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edittext_bg"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edtTextMobileNumber" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:onClick="@{()-> viewModel.onForgotPasswordClick()}"
                        android:text="@string/forgot_password"
                        android:textColor="@color/theme_color"
                        android:textSize="@dimen/_11sdp"
                        app:fontFamily="@font/linotte_semi_bold"
                        app:layout_constraintEnd_toEndOf="@+id/edtTextPassword"
                        app:layout_constraintTop_toBottomOf="@+id/edtTextPassword" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/buttonLogin"
                        style="@style/LogoutButton"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_33sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:onClick="@{()-> viewModel.onLoginClick()}"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_13sdp"
                        app:fontFamily="@font/linotte_bold"
                        app:layout_constraintEnd_toEndOf="@+id/edtTextPassword"
                        app:layout_constraintStart_toStartOf="@+id/edtTextPassword"
                        app:layout_constraintTop_toBottomOf="@id/textView4" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/don_t_have_an_account_yet"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@+id/txtSkipForNow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSkipForNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:text="@string/skip_for_now"
            android:onClick="@{()-> viewModel.skipForNow()}"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/_12sdp"
            app:fontFamily="@font/linotte_semi_bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>