<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.forgot_password.ForgotPasswordActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.app.ia.ui.otp_verify.OTPVerifyViewModel" />

    </data>

    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <include
                layout="@layout/common_header"
                app:viewModel="@{viewModel}" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar"
            android:fillViewport="true"
            android:scrollbars="none">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_12sdp"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/_12sdp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textViewGoodDay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:fontFamily="@font/linotte_bold"
                            android:text="@string/verification_code"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/_14sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textViewLoginContinue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:gravity="center"
                            android:text="@string/otp_sent_on_mobile_or_email"
                            android:textSize="@dimen/_12sdp" />

                        <com.chaos.view.PinView
                            android:id="@+id/pinView"
                            style="@style/PinWidget.PinView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_30sdp"
                            android:cursorVisible="false"
                            android:hint="@string/dashes"
                            android:inputType="number"
                            android:text="@{viewModel.otp}"
                            android:textColor="@color/colorAccent"
                            android:textColorHint="@color/light_grey"
                            android:textSize="@dimen/_14sdp"
                            app:fontFamily="@font/linotte_semi_bold"
                            app:hideLineWhenFilled="false"
                            app:itemCount="4"
                            app:itemHeight="50dp"
                            app:itemRadius="4dp"
                            app:itemSpacing="10dp"
                            app:itemWidth="45dp"
                            app:lineColor="#ededed"
                            app:lineWidth="1dp"
                            app:viewType="rectangle" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textViewTimer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/_30sdp"
                            android:text="@{String.format(@string/expiring_in, viewModel.expireTime)}"
                            android:textSize="@dimen/_10sdp"
                            android:visibility="@{viewModel.isTimeFinished() ? View.INVISIBLE : View.VISIBLE}" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/buttonSubmit"
                            style="@style/AddToCartButton"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_32sdp"
                            android:layout_below="@+id/llWalletView"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:background="@drawable/logout_button_bg"
                            android:onClick="@{()-> viewModel.onVerifyClick()}"
                            android:text="@string/verify" />

                        <TextView
                            android:id="@+id/txtViewResendOTP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:text="@string/didn_t_receive_the_otp"
                            android:textSize="@dimen/_11sdp"
                            android:visibility="@{viewModel.isTimeFinished() ? View.VISIBLE : View.INVISIBLE}" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </com.google.android.material.card.MaterialCardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </RelativeLayout>

</layout>