<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.forgot_password.ForgotPasswordActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.app.ia.ui.forgot_password.ForgotPasswordViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                layout="@layout/login_header"
                app:viewModel="@{viewModel}" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_15sdp"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:background="@color/white"
                app:cardElevation="@dimen/_4sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_16sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/_30sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/textViewLogo"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="@dimen/_90sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/login_logo" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewForgotPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_26sdp"
                        android:paddingStart="@dimen/_28sdp"
                        android:paddingEnd="@dimen/_16sdp"
                        android:text="@string/forgot_your_password"
                        android:textColor="@color/colorLogout"
                        android:textSize="@dimen/_15sdp"
                        app:fontFamily="@font/linotte_semi_bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewLogo" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewLoginContinue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:paddingStart="@dimen/_28sdp"
                        android:paddingEnd="@dimen/_16sdp"
                        android:text="@string/enter_your_registered_mobile_number_to_n_reset_your_password"
                        android:textSize="@dimen/_12sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTextMobileNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_28sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:background="@drawable/edittext_bg"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/_11sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewLoginContinue" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/buttonSend"
                        style="@style/LogoutButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_33sdp"
                        android:layout_marginStart="@dimen/_28sdp"
                        android:layout_marginTop="@dimen/_26sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:onClick="@{()-> viewModel.onSendClick()}"
                        android:text="@string/send"
                        android:textAllCaps="true"
                        android:textSize="@dimen/_12sdp"
                        app:fontFamily="@font/linotte_semi_bold"
                        app:layout_constraintEnd_toEndOf="@+id/edtTextMobileNumber"
                        app:layout_constraintStart_toStartOf="@+id/edtTextMobileNumber"
                        app:layout_constraintTop_toBottomOf="@+id/edtTextMobileNumber" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>